QBank para QBank

--- a/resources/[core]/phone/html/index.html
+++ b/resources/[core]/phone/html/index.html
@@ -993,8 +993,8 @@
 
                     <div class="bank-app">
                         <div class="bank-app-loading">
-                            <img src="../html/img/apps/bank-logo.png" class="bank-logo">
-                            <span id="bank-text">Bank</span>
+                            <img src="../html/img/apps/bank-logo.png" class="qbank-logo">
+                            <span id="qbank-text">Bank</span>
                         </div>
                         <div class="bank-app-loaded">
                             <div class="bank-app-header">
