--- a/resources/[core]/fitbit/html/index.html
+++ b/resources/[core]/fitbit/html/index.html
@@ -24,24 +24,24 @@
                 <div class="food-app">
                     <span class="app-titel">Nutrition</span>
                     <div class="food-alert-setting">
-                        <p>At what % would you like an alert?</p>
+                        <p>Em quê % Você gostaria de um alerta?</p>
                     </div>
                     <input type="number" class="food-precentage" placeholder="50%" min="1" max="100">
                     <div class="app-buttons">
-                        <div class="app-button save-food-settings"><p>Save</p></div>
-                        <div class="app-button back-food-settings"><p>Back</p></div>
+                        <div class="app-button save-food-settings"><p>Salvar</p></div>
+                        <div class="app-button back-food-settings"><p>Voltar</p></div>
                     </div>
                 </div>
 
                 <div class="thirst-app">
-                    <span class="app-titel">Thirst</span>
+                    <span class="app-titel">Sede</span>
                     <div class="food-alert-setting">
-                        <p>At what % would you like an alert?</p>
+                        <p>Em quê % Você gostaria de um alerta?</p>
                     </div>
                     <input type="number" class="food-precentage" placeholder="50%" min="1" max="100">
                     <div class="app-buttons">
-                        <div class="app-button save-thirst-settings"><p>Save</p></div>
-                        <div class="app-button back-thirst-settings"><p>Back</p></div>
+                        <div class="app-button save-thirst-settings"><p>Salvar</p></div>
+                        <div class="app-button back-thirst-settings"><p>Voltar</p></div>
                     </div>
                 </div>
             </div>
