--- a/resources/[core]/phone/html/index.html
+++ b/resources/[core]/phone/html/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.2.9/purify.min.js" integrity="sha512-VOTFfd4vxPpuE98m9UQTN7j2N2/Blw44lZMhRTnZQqA2gOHq7Yvn5bdIDjjAZuFqqkDtppcjMW+dN3GYbhM94g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/moment@2.29.1/moment.min.js"></script>
-    <title>QBCore Phone</title>
+    <title>Phone</title>
 
     <!-- CSS File's -->
     <link rel="stylesheet" href="./css/main.css">
@@ -49,11 +49,11 @@
             <div class="phone-container phone-background">
                 <!-- Phone Header -->
                 <div class="phone-header">
-                    <div id="phone-server">QBCore</div>
+                    <div id="phone-server">Core</div>
                     <div id="player-id">1</div>
                     <div id="phone-time">08:05</div>
                     <div id="phone-icons">
-                        <i class="fas fa-signal" id="phone-signal" data-toggle="tooltip" data-placement="left" title="QBCore 5G"></i>
+                        <i class="fas fa-signal" id="phone-signal" data-toggle="tooltip" data-placement="left" title="Core 5G"></i>
                         <i class="fas fa-battery-three-quarters" id="phone-battery"></i>
                     </div>
                 </div>
@@ -783,7 +783,7 @@
                         <div class="mail-home">
                             <div class="mail-header">
                                 <span id="mail-header-text">Inbox</span>
-                                <span id="mail-header-mail">jay.nandes@qbcore.com</span>
+                                <span id="mail-header-mail">jay.nandes@core.com</span>
                                 <span id="mail-header-lastsync">Last synchronization 18:31</span>
                             </div>
 
@@ -993,8 +993,8 @@
 
                     <div class="bank-app">
                         <div class="bank-app-loading">
-                            <img src="../html/img/apps/bank-logo.png" class="qbank-logo">
-                            <span id="qbank-text">Bank</span>
+                            <img src="../html/img/apps/bank-logo.png" class="bank-logo">
+                            <span id="bank-text">Bank</span>
                         </div>
                         <div class="bank-app-loaded">
                             <div class="bank-app-header">
