--- a/resources/[core]/houses/html/index.html
+++ b/resources/[core]/houses/html/index.html
@@ -14,48 +14,48 @@
         <div class="container" id="noselect">
             <div class="contract-main">
                 <img src="./img/dynasty8-logo.png" class="dynasty8-logo">
-                <span id="welcome-text">Welcome <span id="welcome-name"></span></span>
+                <span id="welcome-text">Bem-vindo <span id="welcome-name"></span></span>
                 <div class="contract-sub">
-                    <div class="contract-header"><span id="contract-header-text">Property Purchase Contract</span></div>
+                    <div class="contract-header"><span id="contract-header-text">Contrato de compra de propriedades</span></div>
                     <div class="contract-information">
                         <div class="contract-information-header">
-                            <span id="contract-information-text">Buy house</span>
+                            <span id="contract-information-text">Comprar casa</span>
                         </div>
                         <div class="property-info">
-                            <span class="property-info-text">House address:</span>
+                            <span class="property-info-text">Endereço residencial:</span>
                             <div id="propert-info-hr"></div>
                             <span class="property-info-info" id="property-adress"></span>
                         </div>
                         <div class="property-info">
-                            <span class="property-info-text">House price:</span>
+                            <span class="property-info-text">Preço da casa:</span>
                             <div id="propert-info-hr"></div>
                             <span class="property-info-info" id="property-price"></span>
                         </div>
                         <div class="property-info">
-                            <span class="property-info-text">Agency fees (5%):</span>
+                            <span class="property-info-text">Taxas de agência (5%):</span>
                             <div id="propert-info-hr"></div>
                             <span class="property-info-info" id="property-brokerfee"></span>
                         </div>
                         <div class="property-info">
-                            <span class="property-info-text">Bank fees (10%):</span>
+                            <span class="property-info-text">Taxas bancárias (10%):</span>
                             <div id="propert-info-hr"></div>
                             <span class="property-info-info" id="property-bankfee"></span>
                         </div>
                         <div class="property-info">
-                            <span class="property-info-text">Government Tax (6%):</span>
+                            <span class="property-info-text">Imposto (6%):</span>
                             <div id="propert-info-hr"></div>
                             <span class="property-info-info" id="property-taxes"></span>
                         </div>
                         <div class="property-info">
-                            <span class="property-info-text">Total cost:</span>
+                            <span class="property-info-text">Custo total:</span>
                             <div id="propert-info-hr"></div>
                             <span class="property-info-info" id="property-totalprice"></span>
                         </div>
                         <div class="property-cancel">
-                            <span id="property-cancel-text">Cancel</span>
+                            <span id="property-cancel-text">Cancelar</span>
                         </div>
                         <div class="property-accept">
-                            <span id="property-accept-text">Buy house</span>
+                            <span id="property-accept-text">Comprar casa</span>
                         </div>
                     </div>
                 </div>
@@ -83,20 +83,20 @@
             <div class="decorate-confirm">
                 <p>You sure u want to buy the object</p>
                 <div class="decorate-confirm-buttons">
-                    <button class="btn btn-group btn-spawnobj" id="buy-object">Yes</button>
-                    <button class="btn btn-group btn-spawnobj" id="cancel-object">No</button>
+                    <button class="btn btn-group btn-spawnobj" id="buy-object">Sim</button>
+                    <button class="btn btn-group btn-spawnobj" id="cancel-object">Não</button>
                 </div>
             </div>
             <div class="decorate-keys">
                 <ul id="decorate-keys" style="list-style-type:disc;">
-                    <li>WASD/Mouse to move the camera.</li>
-                    <li>Arrow Keys to Move Object.</li>
-                    <li>PAGE UP/DOWN To move object up and down.</li>
+                    <li>WASD/Mouse Para mover a câmera.</li>
+                    <li>Arrow Chaves para se mover Object.</li>
+                    <li>PAGE UP/DOWN Para mover o objeto para cima e para baixo.</li>
                     <li>LEFTALT To place object on the ground></object>.</li>
-                    <li>F3 To switch to turn and move.</li>
-                    <li>ENTER to buy and place the object.</li>
-                    <li>F5 to turn mouse on / off to turn mouse on / off to turn mouse on / off.</li>
-                    <li>ESC to disable Decoration mode.</li>
+                    <li>F3 Para mudar para girar e se mover.</li>
+                    <li>ENTER Para comprar e colocar o objeto.</li>
+                    <li>F5 Para virar o mouse on / off para ligar o mouse / off para ligar o mouse / off.</li>
+                    <li>ESC Para desativar o modo de decoração.</li>
                 </ul>
             </div>
             <div class="decorate-footer">
