--- a/resources/[core]/cityhall/html/index.html
+++ b/resources/[core]/cityhall/html/index.html
@@ -23,13 +23,13 @@
                     <div class="identity-page-blocks"></div>
                     <div class="hover-description"></div>
                     <div class="request-identity-button"></div>
-                    <div class="back-to-main"><p>Back</p></div>
+                    <div class="back-to-main"><p>Voltar</p></div>
                 </div>
 
                 <div class="cityhall-job-page">
                     <div class="job-page-blocks"></div>
-                    <div class="apply-job-button"><p>Apply</p></div>
-                    <div class="back-to-main"><p>Back</p></div>
+                    <div class="apply-job-button"><p>Aplicar</p></div>
+                    <div class="back-to-main"><p>Voltar</p></div>
                 </div>
             </div>
         </div>
