--- a/resources/[core]/inventory/html/ui.html
+++ b/resources/[core]/inventory/html/ui.html
@@ -19,7 +19,7 @@
         <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js" integrity="sha256-xH4q8N0pEzrZMaRmd7gQVcTZiFei+HfRTBPJ1OGXC0k=" crossorigin="anonymous"></script>
     </head>
     <body style="background-color: rgba(0, 0, 0, 0); font-family: Calibri !important;">
-        <div id="qbcore-inventory">
+        <div id="inventory">
             <div class="inventory-info">
                 <div class="player-inv-info">
                     <span id="player-inv-label">Player</span><br>
@@ -99,8 +99,8 @@
                                 <q-checkbox dark v-on:click="select($event)" v-model="showblur" color="checkbox"></q-checkbox>
                             </q-item-section>
                             <q-item-section>
-                                <q-item-label class="text-check">Show Background Blur</q-item-label>
-                                <q-item-label caption>Disabling this will remove the background blur effect while inside your inventory.</q-item-label>
+                                <q-item-label class="text-check">Mostre um borlão de fundo</q-item-label>
+                                <q-item-label caption>Desativar isso removerá o efeito do Blur de fundo enquanto estiver dentro do seu inventário.</q-item-label>
                             </q-item-section>
                             </q-item>
                         </div>
@@ -119,7 +119,7 @@
                       </q-card-section>
               
                       <q-card-section class="q-pt-none">
-                        To move a full stack make sure the <b>AMOUNT FIELD</b> is empty. You can type the specific <b>NUMBER AMOUNT</b> for how much you would like to move. To <b>USE</b> an item, drag it into the middle option titled "USE" or you can <b>DOUBLE CLICK</b>. The <b>AMOUNT FIELD</b> will NOT reset when you close your inventory, so make sure you get in the habit of clearing the number!
+                        Para mover uma pilha completa, verifique se o <b>AMOUNT FIELD</b> está vazia.Você pode digitar o específico <b>NUMBER AMOUNT</b> Por quanto você gostaria de se mudar.Para <b>USAR</b> um item, arraste -o para a opção do meio intitulada "USAR" ou você pode <b>DOUBLE CLICK</b>. o <b>AMOUNT FIELD</b> Não será redefinido quando você fechar seu inventário, portanto, tenha o hábito de limpar o número!
                       </q-card-section>
 
                       <q-card-section>
@@ -128,12 +128,12 @@
 
                       <q-card-section class="q-pt-none">
                         <ul>
-                            <li>Use: Drag item to this button to use that item</li>
-                            <li>Give: Give item to other citizens around you</li>
-                            <li>Combine: Combine certain items together</li>
-                            <li>Switch: Switch current item</li>
-                            <li>Attachments: When you have items you can attach to your weapons</li>
-                            <li>Close: Another way to close the inventory</li>
+                            <li>Use: Arraste o item para este botão para usar esse item</li>
+                            <li>Give: Dê um item a outros cidadãos ao seu redor</li>
+                            <li>Combine: Combine certos itens</li>
+                            <li>Switch: Switch Item atual</li>
+                            <li>Attachments: Quando você tem itens, você pode anexar às suas armas</li>
+                            <li>Close: Outra maneira de fechar o inventário</li>
                         </ul>
                       </q-card-section>
 
@@ -143,11 +143,11 @@
 
                       <q-card-section class="q-pt-none">
                         <ul>
-                            <li>Left Click: Normal drag</li>
-                            <li>Right Click: Drop item or move single item storage</li>
-                            <li>Double Click: Use Item</li>
-                            <li>Number 0-9: Will input the typed number</li>
-                            <li>BACKSPACE Key: Will set <b>AMOUNT</b> to blank/move entire item stack</li>
+                            <li>Left Click: Arrasto normal</li>
+                            <li>Right Click: Soltar item ou mover armazenamento de item único</li>
+                            <li>Double Click: Usar Item</li>
+                            <li>Number 0-9: Inserirá o número digitado</li>
+                            <li>BACKSPACE Key: Irá definir <b>AMOUNT</b> para blank/move Item inteiro pilha</li>
                         </ul>
                       </q-card-section>
 
@@ -156,7 +156,7 @@
                       </q-card-section>
                       
                       <q-card-section class="q-pt-none">
-                        Put in the <b>AMOUNT</b> you want to buy in the <b>AMOUNT FIELD</b> and then drag the shop item into your inventory
+                        Coloque no <b>AMOUNT</b> Você quer comprar no <b>AMOUNT FIELD</b> e depois arraste o item da loja para o seu inventário
                       </q-card-section>
                     </q-card>
                   </q-dialog>
@@ -165,9 +165,9 @@
             <div class="inv-background"></div>
         </div>
         <div class="weapon-attachments-container">
-            <div class="weapon-attachments-container-title">Pistol | <span style="font-size: 2vh;">9mm</span></div>
-            <div class="weapon-attachments-container-description">This is a water gun yaay ...</div>
-            <div class="weapon-attachments-container-details"><span style="font-weight: bold; letter-spacing: .1vh;">Serial Number</span><br> 12345678<br><br><span style="font-weight: bold; letter-spacing: .1vh;">Durability</span> <div class="weapon-attachments-container-detail-durability"><div class="weapon-attachments-container-detail-durability-total"></div></div></div>
+            <div class="weapon-attachments-container-title">Pistola | <span style="font-size: 2vh;">9mm</span></div>
+            <div class="weapon-attachments-container-description">Esta é uma arma de água yaay ...</div>
+            <div class="weapon-attachments-container-details"><span style="font-weight: bold; letter-spacing: .1vh;">Número de série</span><br> 12345678<br><br><span style="font-weight: bold; letter-spacing: .1vh;">Durabilidade</span> <div class="weapon-attachments-container-detail-durability"><div class="weapon-attachments-container-detail-durability-total"></div></div></div>
             <img src="./attachment_images/weapon_pistol.png" class="weapon-attachments-container-image">
 
             <div class="weapon-attachments-title"><span style="font-weight: bold; letter-spacing: .1vh;">Attachments</span></div>
