--- a/resources/[core]/doorlock/html/index.html
+++ b/resources/[core]/doorlock/html/index.html
@@ -10,7 +10,7 @@
             <audio id="sounds"><source type="audio/ogg"></audio>
             <div id="doorlock-container" :class="doorlockClassObject" :style="doorlockStyleObject">{{ doorText }}</div>
             <div class="textInfo">
-                <p id="aim" style="display: none;">Aim at your desired door.<br>Press the left mouse button to confirm the selected door</p>
+                <p id="aim" style="display: none;">Mire na porta desejada.<br>Pressione o botão esquerdo do mouse para confirmar a porta selecionada</p>
                 <div id="textDetails" style="display: none;">
                     <p id="coords">Coordinates: {{ coords }}</p>
                     <p id="heading">Heading: {{ heading }}</p>
