--- a/resources/[core]/atms/nui/index.html
+++ b/resources/[core]/atms/nui/index.html
@@ -29,12 +29,12 @@
                     </div>
                     <div class="col-8">
                         <div class="card-body p-0">
-                            <h5 class="card-title pb-0 pt-1 pl-2 mb-0" id="cardOwner">Card title</h5>
+                            <h5 class="card-title pb-0 pt-1 pl-2 mb-0" id="cardOwner">Título do cartão</h5>
                             <p class="card-text pl-2"><small class="text-muted"><span id="cardType">Visa</span><br><span id="cardNumber">************4354</span></small></p>
                         </div>
                     </div>
                     <div class="col-2 my-auto pr-1">
-                        <button class="btn btn-primary btn-sm btn-block">Use</button>
+                        <button class="btn btn-primary btn-sm btn-block">Usar</button>
                     </div>
                 </div>
             </div>
@@ -42,7 +42,7 @@
     </div>
     <div class="row" style="position: relative; top: 54px;">
         <div class="col-12 text-center">
-            <button class="btn btn-danger" id="cancelTransaction" style=" color: white">Cancel Transaction</button>
+            <button class="btn btn-danger" id="cancelTransaction" style=" color: white">Cancelar transações</button>
         </div>
     </div>
 </div>
@@ -54,7 +54,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-12 text-center p-2" style="font-size: 16px; color: white;">Please enter your debit card pin, to access the ATM.</div>
+        <div class="col-12 text-center p-2" style="font-size: 16px; color: white;">Por favor, insira seu pino de cartão de débito, para acessar o caixa eletrônico.</div>
     </div>
     <div class="row m-1">
         <div class="col-12 pt-2 pb-4"><input type="password" class="form-control text-center" id="pinCode" style="height:60px; line-height:60px; font-size:30px;" readonly="readonly"></div>
@@ -75,15 +75,15 @@
         <div class="col-4 text-center"><button class="btn btn-block btn-info" data-act="enterNumber" data-number="9">9</button></div>
     </div>
     <div class="row m-1" style="position: relative; top: 5px;">
-        <div class="col-4 text-center"><button class="btn btn-block btn-danger" data-act="enterNumber" data-number="CANCEL">CANCEL</button></div>
+        <div class="col-4 text-center"><button class="btn btn-block btn-danger" data-act="enterNumber" data-number="CANCEL">CANCELAR</button></div>
         <div class="col-4 text-center"><button class="btn btn-block btn-info" data-act="enterNumber" data-number="0">0</button></div>
-        <div class="col-4 text-center"><button class="btn btn-block btn-success" data-act="enterNumber" data-number="ACCEPT" id="acceptButton">ACCEPT</button></div>
+        <div class="col-4 text-center"><button class="btn btn-block btn-success" data-act="enterNumber" data-number="ACCEPT" id="acceptButton">ACEITAR</button></div>
     </div>
     <div class="row m-1" style="position: relative; top: 5px;">
-        <div class="col-12 text-center"><button class="btn btn-block btn-warning" data-act="enterNumber" data-number="CLEAR">CLEAR</button></div>
+        <div class="col-12 text-center"><button class="btn btn-block btn-warning" data-act="enterNumber" data-number="CLEAR">CLEAN</button></div>
     </div>
     <div class="row" style="position: relative; top: 10px;">
-        <div class="col-12 text-center p-2" style="font-size: 12px; color: white; margin-bottom: 50px;">By entering your pin and pressing the accept button you are authorising a debit of $<span id="amount2">3535</span> from your bank account directly to the merchant.</div>
+        <div class="col-12 text-center p-2" style="font-size: 12px; color: white; margin-bottom: 50px;">Ao inserir seu alfinete e pressionar o botão de aceitação, você está autorizando um débito de $<span id="amount2">3535</span> from your bank account directly to the merchant.</div>
     </div>
 </div>
 
@@ -111,7 +111,7 @@
                                             <div class="card-body">
                                                 <p class="card-text"><small>
                                                 Nome da conta: <span id="accountNameATM"></span><br>
-                                                Account Number: <span id="accountNumberATM"></span><br>
+                                                Número da conta: <span id="accountNumberATM"></span><br>
                                                 </small></p>
                                             </div>
                                         </div>  
@@ -119,7 +119,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-12">
-                                        <button class="btn btn-block btn-danger mt-2" id="logoffbuttonatm">Logoff</button>
+                                        <button class="btn btn-block btn-danger mt-2" id="logoffbuttonatm">logoff</button>
                                     </div>
                                 </div>
                             </div>
@@ -130,8 +130,8 @@
                         <div class="tab-pane fade active show" id="bankingHomeATM" role="tabpanel" aria-labelledby="enteringPinTab">
                                 <div class="container-fluid p-2" style="position: relative; top: 54px;">
                                         <<div class="row">
-                                            <div class="col-12 title"><h3 style="font-size: 24px; color: white;">Welcome <span id="customerNameATM"></span></h3></div>
-                                            <div class="col-12 content"><p style="font-size: 12px; color: white;">Welcome to your personal banking screen, from this screen you can make deposits, withdrawals and transfer money to other people, You can also check your recent activity using your statement.</p></div>
+                                            <div class="col-12 title"><h3 style="font-size: 24px; color: white;">Bem-vindo <span id="customerNameATM"></span></h3></div>
+                                            <div class="col-12 content"><p style="font-size: 12px; color: white;">Bem -vindo à sua tela bancária pessoal, a partir desta tela, você pode fazer depósitos, saques e transferir dinheiro para outras pessoas, você também pode verificar sua atividade recente usando sua declaração.</p></div>
                                         </div>
                                     <div class="row" id="successRowATM" style="display:none;">
                                         <div class="col-12">
@@ -141,19 +141,19 @@
                                 <div class="row" style="position: relative; top: 15px;">
                                     <div class="col-6">
                                         <div class="card mb-3" style="background:rgba(51, 51, 51, 0.8); color: #fff">
-                                            <div class="card-header"><i class="fad fa-fw fa-money-bill-wave"></i> Current Account Balance</div>
+                                            <div class="card-header"><i class="fad fa-fw fa-money-bill-wave"></i> Saldo atual da conta</div>
                                             <div class="card-body">
                                               <h5 class="card-title" id="currentBalanceATM" style=" color: #28a745"></h5>
-                                              <p class="card-text">This is currently how much is avaliable to spend in your account.</p>
+                                              <p class="card-text">Atualmente, é o quanto está disponível para gastar em sua conta.</p>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-6">
                                         <div class="card mb-3" style="background:rgba(51, 51, 51, 0.8); color: #fff">
-                                            <div class="card-header"><i class="fad fa-fw fa-coin"></i> Current Cash Balance</div>
+                                            <div class="card-header"><i class="fad fa-fw fa-coin"></i> Saldo de caixa atual</div>
                                             <div class="card-body">
                                               <h5 class="card-title" id="currentCashBalanceATM" style=" color: #28a745"></h5>
-                                              <p class="card-text">This is currently how much cash you have on your person.</p>
+                                              <p class="card-text">Atualmente, é quanto dinheiro você tem em sua pessoa.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -162,7 +162,7 @@
                                 <div class="row" style="position: relative; top: 15px;">
                                     <div class="col-12">
                                         <div class="card mb-3" style="background:rgba(51, 51, 51, 0.8); color: white">
-                                            <div class="card-header"><i class="fad fa-fw fa-pencil-alt"></i> Quick Actions</div>
+                                            <div class="card-header"><i class="fad fa-fw fa-pencil-alt"></i> Ações rápidas</div>
                                             <div class="card-body">
                                                 <div class="container-fluid">
                                                     <div class="row m-1">
@@ -171,7 +171,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="card-footer"><p class="card-text"><small>These are some quick actions that will enable a quicker and smoother process.</small></p></div>
+                                            <div class="card-footer"><p class="card-text"><small>Essas são algumas ações rápidas que permitirão um processo mais rápido e suave.</small></p></div>
                                           </div>
                                     </div>
                                 </div>
@@ -181,29 +181,29 @@
                         <div class="tab-pane fade" id="bankingWithdrawATM" role="tabpanel" aria-labelledby="bankingWithdrawATM-tab">
                             <div class="container-fluid p-2" style="position: relative; top: 54px;">
                                     <div class="row">
-                                        <div class="col-12 title"><h3 style="font-size: 24px; color: white;">Withdrawals</h3></div>
+                                        <div class="col-12 title"><h3 style="font-size: 24px; color: white;">Retiradas</h3></div>
                                     </div>
                                     <div class="row">
                                         <div class="col-12" style="font-size: 12px; color: white;">
-                                            Withdrawal of specific amounts can be completed on this screen, a Withdrawal is where money being taken out of your current account, if you are wanting to withdraw money from your savings, you must first transfer the funds to your current account.
+                                            A retirada de valores específicos pode ser concluída nesta tela, uma retirada é onde o dinheiro é retirado da sua conta corrente, se você deseja retirar dinheiro da sua economia, primeiro transfira os fundos para sua conta corrente.
                                         </div>
                                     </div>
                                     <div class="row" style="position: relative; top: 15px;">
                                         <div class="col-6">
                                             <div class="card mb-3" style="background:rgba(51, 51, 51, 0.8); color: #fff">
-                                                <div class="card-header"><i class="fad fa-fw fa-money-bill-wave"></i> Current Account Balance</div>
+                                                <div class="card-header"><i class="fad fa-fw fa-money-bill-wave"></i> Saldo atual da conta</div>
                                                 <div class="card-body">
                                                   <h5 class="card-title" id="currentBalanceATM1" style=" color: #28a745"></h5>
-                                                  <p class="card-text">This is currently how much is avaliable to spend in your account.</p>
+                                                  <p class="card-text">Atualmente, é o quanto está disponível para gastar em sua conta.</p>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-6">
                                             <div class="card mb-3" style="background:rgba(51, 51, 51, 0.8); color: #fff">
-                                                <div class="card-header"><i class="fad fa-fw fa-coin"></i> Current Cash Balance</div>
+                                                <div class="card-header"><i class="fad fa-fw fa-coin"></i> Saldo de caixa atual</div>
                                                 <div class="card-body">
                                                   <h5 class="card-title" id="currentCashBalance1ATM" style=" color: #28a745"></h5>
-                                                  <p class="card-text">This is currently how much cash you have on your person.</p>
+                                                  <p class="card-text">Atualmente, é quanto dinheiro você tem em sua pessoa.</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -221,10 +221,10 @@
                                                                     </div>
                                                                 </div>
                                                                     <div class="row">
-                                                                        <div class="col-12 content">Please specify the amount you wish to Withdraw below.</div>
+                                                                        <div class="col-12 content">Especifique o valor que você deseja retirar abaixo.</div>
                                                                     </div>
                                                                 <div class="row mt-2">
-                                                                    <div class="col-3 my-auto"><label for="withdrawAmounATMt"><small>Amount to Withdraw</small></label></div>
+                                                                    <div class="col-3 my-auto"><label for="withdrawAmounATMt"><small>Quantidade à sacar</small></label></div>
                                                                     <div class="col-9"><input type="number" placeholder="$" class="form-control" id="withdrawAmountATM" name="withdrawAmountATM"></div>
                                                                 </div>
                                                             </div>
@@ -234,7 +234,7 @@
                                         </div>
                                     </div>
                                     <div class="row" style="position: relative; top: 15px;">
-                                        <div class="col-12 text-center"><button class="btn btn-secondary2" id="initiateWithdrawATM">Complete Withdrawal</button></div>
+                                        <div class="col-12 text-center"><button class="btn btn-secondary2" id="initiateWithdrawATM">Retirada completa</button></div>
                                     </div>
                                 </div>
                             </div>
@@ -242,7 +242,7 @@
                         <div class="tab-pane fade" id="bankingStatementATM" role="tabpanel" aria-labelledby="bankingStatementATM-tab">
                                 <div class="container-fluid p-2">
                                     <div class="row">
-                                        <div class="col-12 title"><h3>Current Account Statement</h3></div>
+                                        <div class="col-12 title"><h3>Declaração de conta corrente</h3></div>
                                     </div>
                                     <div class="row">
                                         <div class="col-12">
@@ -252,10 +252,10 @@
                                                     <thead>
                                                         <tr>
                                                             <th>Date</th>
-                                                            <th>Description</th>
-                                                            <th class="text-center">Withdrawn</th>
-                                                            <th class="text-center">Deposit</th>
-                                                            <th class="text-center">New Balance</th>
+                                                            <th>Descrição</th>
+                                                            <th class="text-center">Retirada</th>
+                                                            <th class="text-center">Depósito</th>
+                                                            <th class="text-center">Novo balanço</th>
                                                         </tr>
                                                     </thead>
                                                     <tbody id="currentStatementContentsATM">
