--- a/resources/[core]/phone/html/index.html
+++ b/resources/[core]/phone/html/index.html
@@ -1005,7 +1005,7 @@
                             <div class="bank-app-accounts">
                                 <div class="bank-app-account">
                                     <div class="bank-app-account-title">Account</div>
-                                    <!-- <div class="bank-app-account-number" id="iban-account">NL01QBBA012341234123</div> -->
+                                    <!-- <div class="bank-app-account-number" id="iban-account">NL01JNBA012341234123</div> -->
                                     <input type="text" class="bank-app-account-number" id="iban-account" readonly spellcheck="false">
                                     <div class="bank-app-account-balance">&#36; 5000,00</div>
                                 </div>
